Updated reroute to angelloaiza.com

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="refresh"
-      content="0; url=https://angelloaiza.vercel.app/"
+      content="0; url=https://angelloaiza.com/"
     />
     <title>Redirecting to Angel Loaiza's Portfolio</title>
     <script>
-      window.location.href = "https://angelloaiza.vercel.app/";
+      window.location.href = "https://angelloaiza.com/";
     </script>
   </head>
   <body>
     <p>
       If you are not redirected automatically, follow this
-      <a href="https://angelloaiza.vercel.app/"
+      <a href="https://angelloaiza.com/"
         >link to Angel Loaiza's portfolio</a
       >.
     </p>
